# dl1-data-handler

./: .coveralls.yml  .gitignore  .landscape.yml  .travis.yml  .zenodo.json  AUTHORS  LICENSE  Makefile  README  README.md  README.rst  README.txt  build.sh  config.py  doxy_config  env.json  environment-magic.yml  environment.yml  example_config.yml  example_runlist.yml  exectestversion.py  imageExtractor.C  imageExtractor.h  image_extractor.py  meta.yaml  output.sh  prepDataset.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_light.py  setup_magic.py  testversion.txt  versionbackup.txt
.github/: versionScript.py
conda/: build.sh  conda_build_config.yaml  meta.yaml
config/: example_config.yml  magic_config.yml  magic_data_config.yml  magic_simu_config.yml
ctapipe/: count_events.py  image_extractor.py  image_extractor_sample_data.py  prepare_cuts_dict.py
ctapipe_io_dl1dh/: __init__.py
dl1-data-handler/: processor.py  reader.py  table_definitions.py
dl1_data_handler/: MAGICEventSource.py  __init__.py  _version_cache.py  conftest.py  containers.py  dl1_data_writer.py  dl1dheventsource.py  dl_eventsources.py  exectestversion.py  filters.py  generate_runlist.py  image_mapper.py  loader.py  processor.py  reader.py  reader_legacy.py  row_types.py  table_definitions.py  transforms.py  utils.py  version.py  versionScript.py  write_data.py  writer.py
image-extractor/: .image_extractor.py.swo  .image_extractor.py.swp  image.py  image_extractor.py  row_types.py  run.py
image_extractor/: __init__.py  config.py  image.py  image_extractor.py  row_descriptors.py  row_types.py  trace_converter.py  trace_convertor.py
notebooks/: MAGIC_data_demo.ipynb  all_patches.ipynb  dl1_data_handler_demo.ipynb  dl1_reader_demo.ipynb  dl1reading_stage1.ipynb  in_example_id.ipynb  test_image_mapper.ipynb  test_init_times.ipynb  test_r0_reader.ipynb  (+1 more)
(+75 files in other folders)
