[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dl1_data_handler"
description = "A package of utilities for reading, and applying image processing to Cherenkov Telescope Array (CTA) R1/DL0/DL1 data in a standardized format. Created primarily for testing machine learning image analysis techniques on IACT data."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Ari Brill"},
    {name = "Bryan Kim"},
    {name = "Tjark Miener"},
    {name = "Daniel Nieto", email = "d.nieto@ucm.es"}
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.10"
dependencies = [
    "ctapipe>=0.22, <0.26",
    "astropy",
    "numpy",
    "pandas",
    "pip",
    "pyyaml",
    "scipy",
    "traitlets",
    "pydot",
    "setuptools",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["dl1_data_handler"]

[project.optional-dependencies]
doc = [
  "sphinx",
  "sphinx-rtd-theme",
]
# self reference allows all to be defined in terms of other extras
all = ["dl1_data_handler[doc]"]

[project.urls]
repository = "https://github.com/cta-observatory/dl1-data-handler"

[tool.setuptools_scm]
version_file = "dl1_data_handler/_version.py"

[tool.pytest.ini_options]
testpaths = ["dl1_data_handler"]

norecursedirs = [
    ".git",
    "notebooks",
    "build",
]
